[tool.poetry]
name = "office-ai"
version = "0.1.0"
description = ""
authors = ["Pooya Haratian <pooya.haratian@teampicnic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.0.337"
transformers = "^4.35.0"
openai = "^1.2.2"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
